Update stake tx API
